# ai_vido

./: .env.example  .gitignore  README.md  config.yaml  pyproject.toml  requirements-pipeline.txt  requirements.txt  start.sh  stop.sh
ai_video_studio/: __init__.py  cli.py  config.py  costs.py  languages.py  models.py  orchestrator.py  scheduler.py  styles.py
ai_video_studio/pipeline/: __init__.py  captions.py  images.py  script_gen.py  script_parser.py  upload.py  video.py  voice.py
ai_video_studio/utils/: __init__.py  common.py
ai_video_studio/web/: app.py  jobs.py
ai_video_studio/web/static/: app.js  index.html  style.css
topics/: queue.txt  story.txt
